--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,6 +14,8 @@
     </title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/docs.css">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/highlight.js/8.5/styles/github.min.css">
+	
 
     <!-- Favicons -->
     <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/img/apple-touch-icon-precomposed.png">
@@ -77,9 +79,14 @@
     </div>
 
     <script src="{{ site.baseurl }}/js/anchor.min.js"></script>
+	<script src="http://cdn.bootcss.com/highlight.js/8.5/highlight.min.js"></script>
+	
     <script>
       var selector = '.markdown-body h2, .markdown-body h3, .markdown-body h4';
       addAnchors(selector);
+	  
+	  hljs.initHighlightingOnLoad();
     </script>
+	
   </body>
 </html>
